k8s/security/allow-auth.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: keycloak
  namespace: default
spec:
  selector:
    matchLabels:
      app: keycloak
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT"]
