k8s/security/allow-mpo-api-search.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: mpo-api-search-fastapi-jwt
spec:
  selector:
    matchLabels:
      app: mpo-api-search-fastapi
  jwtRules:
  - issuer: "http://localhost:8080/auth/realms/master"
    jwksUri: "http://keycloak.default:8080/auth/realms/master/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "mpo-api-search-fastapi-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: mpo-api-search-fastapi
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
    from:
    - source:
        requestPrincipals: ["*"]
    when:
    - key: request.auth.claims[permissions]
      values: ["read:search-results"]
