k8s/security/allow-mpo-frontend.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "mpo-frontend-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: mpo-frontend
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT"]
